Final version of the test.

--- a/templates/molecule.html
+++ b/templates/molecule.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Molecular Drawing - {{smiles}}</title>
+    <title>Molecular Drawing</title>
   </head>
   <body>
-    <img src=../static/{{smiles}}.jpg>
+    <img src="data:image/jpeg;base64,{{image}}">
   </body>
 </html>
